updated on 24 oct